--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,6 +150,53 @@ main #candidature-form button:hover {
   background: #0056b3;
 }
 
+#add-mission {
+  background-color: #f8f9fa;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  margin: auto;
+}
+#add-mission h2 {
+  color: #000000;
+  text-align: center;
+  margin-bottom: 20px;
+}
+#add-mission .mission-list {
+  list-style: none;
+  padding: 0;
+}
+#add-mission form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+#add-mission form label {
+  font-weight: bold;
+  color: #333;
+}
+#add-mission form input,
+#add-mission form textarea {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  font-size: 16px;
+}
+#add-mission form button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+  font-size: 16px;
+}
+#add-mission form button:hover {
+  background-color: rgb(0, 98.4, 204);
+}
+
 h1 {
   font-size: 2rem;
   color: #333;
