--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,9 @@ body, html {
   height: 100%;
 }
 
-h1 {
-  color: white;
+.logo {
+  color: rgb(255, 255, 255);
+ 
 }
 
 /* Styles généraux pour la navbar */
